--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Advanced Trig Calculator</title>
+<title>Advanced Trig Calculator</title> 
+<meta name="description" content="Free advanced trigonometric calculator to calculate sin, cos, tan, inverse trigonometric functions and formulas online.">
+  <meta name="keywords" content="advanced trigonometric calculator, trig calculator, sin cos tan calculator, inverse trigonometry">
+  <meta name="robots" content="index, follow">
+<link rel="canonical" href="https://i3in-laden.github.io/Adv-trig-calc/">
 <link rel="icon" type="image/png" href="favicon.png">
 <!-- TOP-LEFT LOGO STYLE -->
 <style>
