--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta name="description" content="Free advanced trigonometric calculator to calculate sin, cos, tan, inverse trigonometric functions and formulas online.">
   <meta name="keywords" content="advanced trigonometric calculator, trig calculator, sin cos tan calculator, inverse trigonometry">
   <meta name="robots" content="index, follow">
+  <meta name="google-site-verification" content="8L-No33NGJpo-zmep4mXJyFzh1ifzN3AyGHbaJANCy0" />
 <link rel="canonical" href="https://i3in-laden.github.io/Adv-trig-calc/">
 <link rel="icon" type="image/png" href="favicon.png">
 <!-- TOP-LEFT LOGO STYLE -->
