--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Advanced Trig Calculator</title> 
+<title>Advanced Trigonometry Calculator | Free Online Tool</title> 
 <meta name="description" content="Free advanced trigonometric calculator to calculate sin, cos, tan, inverse trigonometric functions and formulas online.">
   <meta name="keywords" content="advanced trigonometric calculator, trig calculator, sin cos tan calculator, inverse trigonometry">
   <meta name="robots" content="index, follow">
   <meta name="google-site-verification" content="8L-No33NGJpo-zmep4mXJyFzh1ifzN3AyGHbaJANCy0" />
-<link rel="canonical" href="https://i3in-laden.github.io/Adv-trig-calc/">
+<link rel="canonical" href="https://l3in-laden.github.io/Adv-trig-calc/">
 <link rel="icon" type="image/png" href="favicon.png">
 <!-- TOP-LEFT LOGO STYLE -->
 <style>
@@ -92,7 +92,7 @@ canvas { background: var(--box); border-radius: 8px; }
 <img src="logo.jpg" class="site-logo" alt="Logo">
 
 <div class="container">
-    <h2 style="text-align:center;">Advanced Trig Calculator</h2>
+    <h1 style="text-align:center;">Advanced Trigonometry Calculator</h1>
 
     <label>Enter Value:</label>
     <input id="value" type="number" placeholder="Enter angle or ratio">
