--- a/index.html
+++ b/index.html
@@ -27,6 +27,30 @@
         object-fit: contain;
         z-index: 9999;
     }
+  /* ---------- MOBILE FIX ---------- */
+@media (max-width: 900px) {
+    .page {
+        display: block;
+    }
+
+    .side-links {
+        display: none !important;
+    }
+}
+/* ---------- FOOTER CONTROL (STEP 3) ---------- */
+.site-footer {
+  display: none;
+  text-align: center;
+  margin: 40px 0 15px;
+  font-size: 14px;
+  opacity: 0.85;
+}
+
+@media (max-width: 900px) {
+  .site-footer {
+    display: block;
+  }
+}
 </style>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -55,9 +79,15 @@ body {
     color: var(--text);
     font-family: Arial;
     padding: 20px;
-    display: flex;
-    justify-content: center;
     transition: 0.3s;
+}
+  .page {
+  max-width: 1200px;
+  margin: auto;
+  display: grid;
+  grid-template-columns: 1fr 320px;
+  gap: 30px;
+  align-items: start;
 }
 .container {
     background: var(--box);
@@ -96,8 +126,8 @@ canvas { background: var(--box); border-radius: 8px; }
 
 <!-- 🔥 TOP LEFT LOGO -->
 <img src="logo.jpg" class="site-logo" alt="Logo">
-
-<div class="container">
+<div class="page">
+<main class="container">
     <h1 style="text-align:center;">Advanced Trigonometry Calculator</h1>
 <p style="text-align:center; max-width:700px; margin:auto;">
 This advanced trigonometry calculator helps students, teachers, and engineers
@@ -146,9 +176,14 @@ results, interactive graphs, and a dynamic unit circle.
 
     <div class="switch">
         <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
-    </div>
-</div>
-
+    </main>
+    <div class="side-links">
+    <a href="about.html">About</a> |
+    <a href="contact.html">Contact</a> |
+    <a href="privacy-policy.html">Privacy Policy</a> |
+    <a href="terms.html">Terms & Conditions</a>
+      </div>
+  </div>
 <script>
 let chart;
 let lastAngleRad = 0;
@@ -394,8 +429,8 @@ function toggleDarkMode(){
     document.body.classList.toggle("dark");
     drawUnitCircle(lastAngleRad, lastUnit);
 }
-</script>
-  <footer style="text-align:center; margin-top:40px; font-size:14px; opacity:0.85;">
+</script> 
+  <footer class="site-footer">
   <a href="about.html">About</a> |
   <a href="contact.html">Contact</a> |
   <a href="privacy-policy.html">Privacy Policy</a> |
