--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
     }
 
     .side-links {
-        display: none !important;
+  max-width: 900px;
+  margin: 20px auto 0;
+  text-align: center;
+  font-size: 14px;
+  opacity: 0.85;
     }
 }
 /* ---------- FOOTER CONTROL (STEP 3) ---------- */
@@ -84,10 +88,6 @@ body {
   .page {
   max-width: 1200px;
   margin: auto;
-  display: grid;
-  grid-template-columns: 1fr 320px;
-  gap: 30px;
-  align-items: start;
 }
 .container {
     background: var(--box);
